<resources>

    <!--  Common -->
    <string name="app_name">GuideNews</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="no_result_found">No result found!</string>
    <string name="search_hint">Search for news, topics…</string>


    <!-- News Feed -->
    <string name="country">India</string>
    <string name="location">LOCATION</string>
    <string name="retry">Try Again</string>


    <!--  News Feed Header-->
    <string name="sort">Sort:</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="newest">Newest</string>


    <!--  Location Select Bottom Sheet -->
    <string name="apply_location">Apply</string>
    <string name="choose_location">Choose your location</string>


    <!--  Source Select Bottom Sheet -->
    <string name="filter_by_sources">Filter by sources</string>


    <!--  Search News  -->
    <string name="search">Search</string>


    <!--  News Details  -->
    <string name="read_more">See full story</string>

</resources>