<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableRight="@drawable/ic_search"
        android:focusable="false"
        android:fontFamily="@font/lato"
        android:hint="@string/search_hint"
        android:padding="8dp"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_headline_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/top_headlines"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/textView_sort_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/sort"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_headline_heading"
        app:layout_constraintEnd_toStartOf="@+id/textView_sort" />

    <TextView
        android:id="@+id/textView_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/ic_arrow_drop_down_16"
        android:fontFamily="@font/lato"
        android:text="@string/newest"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_sort_heading"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>